# alidns-updater

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.cargo/: config
.github/workflows/: docker-publish.yml
src/: alidns.rs  lib.rs  main.rs
