[package]
name = "alidns-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
async-std = { version = "1.11.0", features = ["attributes"] }
base64 = "0.13.0"
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["derive", "env"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
tide = "0.16.0"
tide-tracing = "0.0.11"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
url = "2.2.2"
